--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -35,16 +35,16 @@
 
     <header id="mobile" class="row collapse show-for-small-only">
       <nav class="mobile columns small-12">
-        <ul class="accordion" data-accordion data-allow-all-closed="true">
-          <li class="accordion-item" data-accordion-item>
+        <ul class="accordion">
+          <li class="accordion-item">
             <a href="#" class="accordion-title">Menu</a>
-            <div class="accordion-content" data-tab-content>
+            <div class="accordion-content">
               <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#resume">Resume</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#education">Education</a></li>
-                <li><a href="#porfolio">Portfolio</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact Me</a></li>
               </ul>
             </div>
@@ -94,21 +94,34 @@
             <p class="text-center">2013 - Present</p>
             <a href="http://speedcommerce.com" target="_blank"><img src="img/speedcommerce.png" alt="Speed Commerce provides ecommerce technology and service solutions to retailers and manufacturers. These solutions help brands acquire new customers and strengthen the relationship with existing ones by providing personalized, relevant experiences. Services include: ecommerce platform development; hosting, managed ecommerce, and marketing services; order and inventory management; pick, pack, and ship; returns processing; and 24/7 customer care."></a>
             <h4>Speed Commerce</h4>
-            <p>E-commerce expert. In charge of the Graphic Design and HTML Development Teams. User Interface and User Experience focused. Cross Browser compatibility expert. Professional RWD solutions oriented.</p>
+            <ul>
+              <li>E-commerce expert.</li>
+              <li>Head of the Graphic Design &amp; Frontend Teams.</li>
+              <li>User Interface and User Experience focused.</li>
+              <li>Cross Browser compatibility expert.</li>
+              <li>Professional RWD solutions oriented.</li>
+            </ul>
           </div>
           <div class="columns align-self-top small-12 medium-4">
             <h2>UX Developer. Mobile Research Lead. Co-founder</h2>
             <p class="text-center">2009 - Present</p>
             <a href="http://phiveleven.com" target="_blank"><img src="img/511.png" alt="5 11 logo"></a>
             <h4>Phiveleven</h4>
-            <p>Focused on User Experience designs. Developer of fully responsive websites. Designed, developed and published 10 iOS apps featuring data lookup and entry, reference, email, Social sharing accumulating 15 000+ downloads to date.</p>
+            <ul>
+              <li>Focused on User Experience designs.</li>
+              <li>Developer of fully responsive websites.</li>
+              <li>Designed, developed and published 10 iOS apps featuring data lookup and entry, reference, email, social sharing accumulating 15 000+ downloads to date.</li>
+            </ul>
           </div>
           <div class="columns align-self-top small-12 medium-4">
             <h2>Sales, Logistics &amp; Distribution Director. Co-founder</h2>
             <p class="text-center">2007 - Present</p>
             <a href="http://rodiles.com.mx" target="_blank"><img src="img/rodiles.png" alt="Rodiles de Mexico logo"></a>
             <h4>Rodiles de Mexico</h4>
-            <p>Liaise and negotiator with customers and suppliers. Develop new and existing business by gaining new contracts, analyzing logistical problems and produce new solutions in order to keep and create profitable businesses.</p>
+            <ul>
+              <li>Liaise &amp; negotiator with customers &amp; suppliers.</li>
+              <li>Develop new &amp; existing business by gaining new contracts, analyzing logistical problems &amp; produce new solutions in order to keep and create profitable businesses.</li>
+            </ul>
           </div>
         </div>
         <div class="row pb10">
@@ -117,19 +130,25 @@
             <p class="text-center">2003 - 2007</p>
             <a href="http://rioglass.com" target="_blank"><img src="img/rioglass.png" alt="Rioglass logo"></a>
             <h4>Rioglass</h4>
-            <p>Responsible for the Premium Products Quality Assurance Team (BMW, Jaguar, Mini, and Lamborghini). Defined, managed and assured goals and production targets to meet customer's specifications and demand.</p>
+            <ul>
+              <li>Responsible for the Premium Products Quality Assurance Team (BMW, Jaguar, Mini, &amp; Lamborghini).</li>
+              <li>Defined, managed &amp; assured goals and production targets to meet customer's specifications &amp; demand.</li>
+            </ul>
           </div>
           <div class="columns align-self-top small-12 medium-6">
             <h2>Product Engineer &amp; Six Sigma Green Belt</h2>
             <p class="text-center">2000 - 2002</p>
             <a href="http://ford.com" target="_blank"><img src="img/ford.png" alt="Ford Motor Company logo"></a>
             <h4>Ford Motor Company</h4>
-            <p>Saved over USD$150,000 during 2002 in the production and assembly line of the F-150 and F-250 trucks through the application of rigorous Six Sigma Methodologies. Reduced variability of power-train assembly process through the implementation of over 50 successful engineering changes in the production and assembly line.</p>
+            <ul>
+              <li>Saved over USD$150,000 during 2002 in the production and assembly line of the F-150 and F-250 trucks through the application of rigorous Six Sigma Methodologies.</li>
+              <li>Reduced variability of power-train assembly process through the implementation of over 50 successful engineering changes in the production and assembly line.</li>
+            </ul>
           </div>
         </div>
         <div class="row">
           <div class="columns align-self-middle small-12 medium-6">
-            <a class="large download button" href="http://mikerai.com/Miguel_Angel_Rodriguez_Resume.pdf" download="Miguel_Angel_Rodriguez_Resume" target="_blank" title="Download my Resume on a PDF file">Download my Resume</a>
+            <a class="large download button" href="http://mikerai.com/Miguel_Angel_Rodriguez_Resume.pdf" download="Miguel_Angel_Rodriguez_Resume" target="_blank" title="Download my Resume">Download my Resume</a>
           </div>
           <div class="columns small-12 medium-6 linkedin">
             <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
@@ -160,7 +179,7 @@
           <li>Certified Six Sigma Green Belt.</li>
           <li>Expert in wireframing &amp; prototyping.</li>
           <li>Multi-disciplinary teams leadership and management.</li>
-          <li>Expert in forecasting and project management.</li>
+          <li>Expert in forecasting &amp; project management.</li>
           <li>Proficient using SVN &amp; Git tools.</li>
           <li>Fluent in English.</li>
         </ul>
@@ -265,7 +284,7 @@
         <p>Please feel free to shoot me an email so we can start talking about your project.</p>
       </div>
       <div class="columns small-12">
-        <form class="row column" action="mailer.php" id="contact_form" method="post" data-abide novalidate>
+        <form class="row column" action="mailer.php" id="contact_form" method="post" data-abide novalidate="novalidate">
           <div class="small-12 medium-4 medium-offset-4 columns">
             <label>Your name
               <input type="text" placeholder="Your Name goes here" aria-describedby="Please enter your name so I can know who I am addressing to" required pattern="text">
@@ -282,6 +301,14 @@
               </span>
             </label>
           </div>
+          <script>
+            onValidate = function ()
+              {
+                $("button.large.button").removeClass('disabled');
+                $("p.noCaptcha").fadeOut(1500);
+                $("div.g-recaptcha").fadeOut(1500);
+              };
+          </script>
           <div class="small-12 medium-4 medium-offset-4 columns">
             <label>Your e-mail address
               <textarea placeholder="Your message goes here"  aria-describedby="Please enter your message so I can know how I can assist you" required pattern="text"></textarea>
@@ -291,7 +318,12 @@
             </label>
           </div>
           <div class="columns small-12 medium-4 medium-offset-4 action">
-            <button class="submit large button" type="submit">Send</button>
+            <div class="row collapse">
+              <div class="columns small-12 noCaptcha">
+                <div class="g-recaptcha" data-sitekey="6LfP2P0SAAAAAEQv19ZXrjY9GoxxnLulbQYAHDYF" data-callback="onValidate"></div>
+              </div>
+            </div>
+            <button class="submit large button disabled" type="submit">Send</button>
           </div>
         </form>
       </div>     
@@ -339,12 +371,12 @@
       </filter>
     </svg>
 
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/what-input/what-input.min.js"></script>
-    <script src="bower_components/foundation-sites/dist/foundation.min.js"></script>
-    <script src="bower_components/foundation-sites/js/foundation.util.mediaQuery.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/header.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/what-input.min.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script src="js/foundation.util.mediaQuery.js"></script>
+    <script src="js/app-min.js"></script>
+    <script src="js/header-min.js"></script>
     <script>
       var $head = $( '#ha-header' );
       $( '.ha-waypoint' ).each( function(i) {
@@ -361,6 +393,17 @@
           }
         }, { offset: '100%' } );
       } );
+    </script>
+    <script type='text/javascript' src='https://www.google.com/recaptcha/api.js'></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-76762408-1', 'auto');
+      ga('send', 'pageview');
+
     </script>
   </body>
 </html>
