--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="canonical" href="http://mikerai.com" />
     <meta name="robots" content="index follow">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
     <title>Miguel Angel Rodriguez Alvarez Icaza</title>
     <meta name="description" content="Hi! Welcome to my personal site. I'm a UX Manager and an iOS Developer. Contact me to talk about your project.">
     <link rel="stylesheet" href="css/app.css">
