Fixes for mobile

--- a/sara_junio_16/index.html
+++ b/sara_junio_16/index.html
@@ -14,11 +14,8 @@
       <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
         <div class="off-canvas position-left" id="offCanvas" data-off-canvas>
 
-          <button class="close-button" aria-label="Close menu" type="button" data-close>
-            <span aria-hidden="true">&times;</span>
-          </button>
-
           <ul class="vertical menu">
+            <li><a href="#" data-close>Cerrar Men&uacute;</a></li>
             <li><a href="#education">Educaci&oacute;n</a></li>
             <li><a href="#skills">Habilidades</a></li>
             <li><a href="#experience">Experiencia</a></li>
