Updates on mobile muino.net

--- a/sara_junio_16/index.html
+++ b/sara_junio_16/index.html
@@ -39,7 +39,8 @@
           </div>
           <div class="row collapse mobile-nav">
             <div class="columns small-12">
-              <button type="button" class="button" data-toggle="offCanvas">Men&uacute;</button>
+              <button type="button" class="button" data-toggle="offCanvas"></button>
+              <span>Men&uacute;</span>
             </div>
           </div>
           <section class="row heading align-middle align-center" id="heading">
