Fixed mikerai.com mobile menu

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -37,7 +37,7 @@
       <nav class="mobile columns small-12">
         <ul class="accordion">
           <li class="accordion-item">
-            <a href="#" class="accordion-title">Menu</a>
+            <a class="accordion-title">Menu</a>
             <div class="accordion-content">
               <ul>
                 <li><a href="#home">Home</a></li>
