Muino.net retinized

--- a/sara_junio_16/index.html
+++ b/sara_junio_16/index.html
@@ -39,7 +39,7 @@
           </div>
           <div class="row collapse mobile-nav">
             <div class="columns small-12">
-              <button type="button" class="button" data-toggle="offCanvas"></button>
+              <a class="menu-button" data-toggle="offCanvas"><img data-interchange="[img/menu-A.png, small], [img/menu-A.png, medium], [img/menu-A.png, large], [img/menu-A@2x.png, retina]" alt="Menu"></a>
               <span>Men&uacute;</span>
             </div>
           </div>
