Removed comments and updated content on head

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
     <title>Miguel Angel Rodriguez Alvarez Icaza</title>
-    <meta name="description" content="Hi! Welcome to my personal site. I'm a UX Manager and an iOS Developer. Contact me to talk about your project.">
+    <meta name="description" content="I'm a UX Manager and an iOS Developer. Contact me to talk about your project.">
     <link rel="stylesheet" href="css/app.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
   </head>
@@ -299,64 +299,9 @@
               <textarea id="message" placeholder="Your message goes here"></textarea>
           </div>
           <div class="columns small-12 medium-4 medium-offset-4 action">
-            <!--<div class="row">
-              <div class="columns small-12 noCaptcha">
-                <div class="g-recaptcha" data-sitekey="6LfP2P0SAAAAAEQv19ZXrjY9GoxxnLulbQYAHDYF" data-callback="onValidate"></div>
-              </div>
-            </div>-->
             <button class="submit large button" id="submit" type="submit">Send</button>
-            <!--<script>
-              onValidate = function ()
-              {
-                $("button.large.button").removeClass('disabled');
-                $("p.noCaptcha").fadeOut(1500);
-                $("div.g-recaptcha").fadeOut(1500);
-              };
-            </script>-->
           </div>
         </form>
-        <!--<form class="row column" action="mailer.php" id="contact_form" method="post" data-abide novalidate="novalidate">
-          <div class="small-12 medium-4 medium-offset-4 columns">
-            <label>Your name
-              <input type="text" placeholder="Your Name goes here" aria-describedby="Please enter your name so I can know who I am addressing to" required pattern="text">
-              <span class="form-error">
-                Please enter your Name.
-              </span>
-            </label>
-          </div>
-          <div class="small-12 medium-4 medium-offset-4 columns">
-            <label>Your e-mail address
-              <input type="text" placeholder="Your e-mail address goes here" aria-describedby="Please enter your email address so I can contact you back" required pattern="email">
-              <span class="form-error">
-                Please enter your email address.
-              </span>
-            </label>
-          </div>
-          <script>
-            onValidate = function ()
-              {
-                $("button.large.button").removeClass('disabled');
-                $("p.noCaptcha").fadeOut(1500);
-                $("div.g-recaptcha").fadeOut(1500);
-              };
-          </script>
-          <div class="small-12 medium-4 medium-offset-4 columns">
-            <label>Your message
-              <textarea form="contact_form" placeholder="Your message goes here"  aria-describedby="Please enter your message so I can know how I can assist you" required pattern="text"></textarea>
-              <span class="form-error">
-                Please include something on your message.
-              </span>
-            </label>
-          </div>
-          <div class="columns small-12 medium-4 medium-offset-4 action">
-            <div class="row">
-              <div class="columns small-12 noCaptcha">
-                <div class="g-recaptcha" data-sitekey="6LfP2P0SAAAAAEQv19ZXrjY9GoxxnLulbQYAHDYF" data-callback="onValidate"></div>
-              </div>
-            </div>
-            <button class="submit large button disabled" type="submit">Send</button>
-          </div>
-        </form>-->
       </div>     
     </section>
 
