--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
     <title>Miguel Angel Rodriguez Alvarez Icaza</title>
-    <meta name="description" content="I'm a UX Manager and an iOS Developer. Contact me to talk about your project.">
+    <meta name="description" content="UX Manager at Speedcommerce.com • Engineer • E-commerce expert • UI Developer on Oracle ATG • iOS Developer • Collector of rare knowledge. Contact me to discuss your project, It will be my pleasure to help you.">
     <link rel="stylesheet" href="css/app.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
   </head>
