Contact form is working... need to minify and concatenate

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -298,12 +298,6 @@
             <label>Your message:</label>
               <textarea id="message" placeholder="Your message goes here"></textarea>
           </div>
-          <div class="small-12 medium-4 medium-offset-4 columns google-recaptcha">
-            <p class="noCaptcha">
-              <label for="captcha">¿Eres humano?</label>   
-            </p>
-            <div class="g-recaptcha" data-sitekey="6Lfr4v4SAAAAAG2uh-QBhK-4NVX1gtyaXt5z79BT" data-callback="onValidate"></div>
-          </div>
           <div class="columns small-12 medium-4 medium-offset-4 action text-center">
             <button class="submit large button" id="submit" type="submit">Send</button>
           </div>
@@ -316,6 +310,12 @@
               };
           </script>
         </form>
+        <div class="small-12 medium-4 medium-offset-4 columns google-recaptcha">
+          <p class="noCaptcha">
+            <label for="captcha">Are you human?</label>   
+          </p>
+          <div class="g-recaptcha" data-sitekey="6Lfr4v4SAAAAAG2uh-QBhK-4NVX1gtyaXt5z79BT" data-callback="onValidate"></div>
+        </div>
       </div>     
     </section>
 
@@ -361,7 +361,12 @@
       </filter>
     </svg>
 
-    <script src="js/j.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/what-input.min.js"></script>
+    <script src="js/foundation.min.js"></script>
+    <script src="js/app-min.js"></script>
+    <script src="js/header-min.js"></script>
+    <script src="js/validate.js"></script>
     <script>
       var $head = $( '#ha-header' );
       $( '.ha-waypoint' ).each( function(i) {
@@ -379,7 +384,7 @@
         }, { offset: '100%' } );
       } );
     </script>
-    <script type='text/javascript' src='https://www.google.com/recaptcha/api.js'></script>
+    <script type='text/javascript' src="https://www.google.com/recaptcha/api.js?hl=en"></script>
     <script>_gaq=[['_setAccount','UA-76762408-1'],['_trackPageview']]</script>
     <script src="https://www.google-analytics.com/ga.js"></script>
   </body>
