Updated site with iOS support

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -273,6 +273,9 @@
         <a href="https://itunes.apple.com/mx/app/emmas-farm/id587280109?l=en&mt=8" target="_blank" title="Emma's farm screenshots from the Apple app store"><img class="app" src="img/app5.png" alt="e-Cocktails screenshots from the Apple app store"></a>
         <p>Come and play at <a target="_blank" href="https://itunes.apple.com/mx/app/emmas-farm/id587280109?l=en&mt=8">Emma's Farm!</a></p>
       </div>
+      <div class="colum align-self-middle small-12 text-center mtb15">
+        <a class="large ios-support button" href="ios-apps.html" title="Need iOS support?">Need iOS support?</a>
+      </div>
 
       <div class="colum align-self-middle small-12 text-center mtb15">
       <a class="text-center" href="https://itunes.apple.com/us/artist/phiveleven-llc-mikerai/id461579017?l=en"><img class="crystal" src="img/appStoreBig2.png" width="320" height="95" alt="Miguel Angel Rodriguez Apple's App Store logo"></a></div>
