--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
     <title>Miguel Angel Rodriguez Alvarez Icaza</title>
-    <meta name="description" content="UX Manager at Speedcommerce.com • Engineer • E-commerce expert • UI Developer on Oracle ATG • iOS Developer • Collector of rare knowledge. Contact me to discuss your project, It will be my pleasure to help you.">
+    <meta name="description" content="UX Manager at Speedcommerce.com • Engineer • E-commerce expert • UI Developer on Oracle Commerce (formerly ATG) • iOS Developer • Collector of rare knowledge. Contact me to discuss your project, It will be my pleasure to help you.">
     <link rel="stylesheet" href="css/app.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
   </head>
@@ -373,26 +373,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/what-input.min.js"></script>
     <script src="js/foundation.min.js"></script>
-    <script src="js/app-min.js"></script>
-    <script src="js/header-min.js"></script>
-    <script src="js/validate.js"></script>
-    <script>
-      var $head = $( '#ha-header' );
-      $( '.ha-waypoint' ).each( function(i) {
-        var $el = $( this ),
-          animClassDown = $el.data( 'animateDown' ),
-          animClassUp = $el.data( 'animateUp' );
-
-        $el.waypoint( function( direction ) {
-          if( direction === 'down' && animClassDown ) {
-            $head.attr('class', 'ha-header ' + animClassDown);
-          }
-          else if( direction === 'up' && animClassUp ){
-            $head.attr('class', 'ha-header ' + animClassUp);
-          }
-        }, { offset: '100%' } );
-      } );
-    </script>
+    <script src="js/j-min.js"></script>
     <script type='text/javascript' src="https://www.google.com/recaptcha/api.js?hl=en"></script>
     <script>_gaq=[['_setAccount','UA-76762408-1'],['_trackPageview']]</script>
     <script src="https://www.google-analytics.com/ga.js"></script>
