--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <section id="breast-cancer-awareness" class="row expanded align-center align-middle show-for-large-only">
+    <section id="breast-cancer-awareness" class="row expanded align-center align-middle show-for-large">
       <div class="columns small-12">
         <iframe src="http://tracking.fatcow.com/pink/?image=4&ui=g3uKNlQMo8q" height="130" width="200" scrolling="no" frameborder="0"></iframe>
       </div>
