--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -93,13 +93,15 @@
         <h3>Work History</h3>
       </div>
 
-      <article class="columns small-12">
-        <div class="row pb10">
-          <div class="columns align-self-top small-12 medium-4">
-            <h2>UX Manager</h2>
-            <p class="text-center">2013 - Present</p>
-            <a href="http://speedcommerce.com" target="_blank"><img src="img/speedcommerce.png" alt="Speed Commerce provides ecommerce technology and service solutions to retailers and manufacturers. These solutions help brands acquire new customers and strengthen the relationship with existing ones by providing personalized, relevant experiences. Services include: ecommerce platform development; hosting, managed ecommerce, and marketing services; order and inventory management; pick, pack, and ship; returns processing; and 24/7 customer care."></a>
-            <h4>Speed Commerce</h4>
+      <article class="small-12 columns">
+        <h2>UX Manager</h2>
+        <h4>Speed Commerce</h4>
+        <p class="text-center">2013 - Present</p>
+        <div class="row collapse">
+          <div class="columns small-12 medium-6 align-self-middle">
+            <a href="http://speedcommerce.com" target="_blank"><img src="img/speedcommerce.png" alt="Speed Commerce provides ecommerce technology and service solutions to retailers and manufacturers. These solutions help brands acquire new customers and strengthen the relationship with existing ones by providing personalized, relevant experiences. Services include: ecommerce platform development; hosting, managed ecommerce, and marketing services; order and inventory management; pick, pack, and ship; returns processing; and 24/7 customer care."></a>          
+          </div>
+          <div class="columns small-12 medium-6 align-self-middle">
             <ul>
               <li>E-commerce expert.</li>
               <li>Head of the Graphic Design &amp; Frontend Teams.</li>
@@ -108,84 +110,111 @@
               <li>Professional RWD solutions oriented.</li>
             </ul>
           </div>
-          <div class="columns align-self-top small-12 medium-4">
-            <h2>UX Developer. Mobile Research Lead. Co-founder</h2>
-            <p class="text-center">2009 - Present</p>
+        </div>
+      </article>
+
+      <article class="small-12 columns">
+        <h2>UX Developer. Mobile Research Lead. Co-founder</h2>
+        <h4>Phiveleven</h4>
+        <p class="text-center">2009 - Present</p>
+        <div class="row collapse">
+          <div class="columns small-12 medium-6 align-self-middle">  
             <a href="http://phiveleven.com" target="_blank"><img src="img/511.png" alt="5 11 logo"></a>
-            <h4>Phiveleven</h4>
+          </div>
+          <div class="columns small-12 medium-6 align-self-middle">
             <ul>
               <li>Focused on User Experience designs.</li>
               <li>Developer of fully responsive websites.</li>
               <li>Designed, developed and published 10 iOS apps featuring data lookup and entry, reference, email, social sharing accumulating 15 000+ downloads to date.</li>
             </ul>
           </div>
-          <div class="columns align-self-top small-12 medium-4">
-            <h2>Sales, Logistics &amp; Distribution Director. Co-founder</h2>
-            <p class="text-center">2007 - Present</p>
-            <a href="http://rodiles.com.mx" target="_blank"><img src="img/rodiles.png" alt="Rodiles de Mexico logo"></a>
-            <h4>Rodiles de Mexico</h4>
+        </div>
+      </article> 
+
+      <article class="small-12 columns">
+        <h2>Sales, Logistics &amp; Distribution Director. Co-founder</h2>
+        <h4>Rodiles de Mexico</h4>
+        <p class="text-center">2007 - Present</p>
+        <div class="row collapse">
+          <div class="columns small-12 medium-6 align-self-middle">   
+            <a href="http://rodiles.com.mx" target="_blank"><img src="img/rodiles.png" alt="Rodiles de Mexico logo"></a> 
+          </div>
+          <div class="columns small-12 medium-6 align-self-middle">
             <ul>
               <li>Liaise &amp; negotiator with customers &amp; suppliers.</li>
               <li>Develop new &amp; existing business by gaining new contracts, analyzing logistical problems &amp; produce new solutions in order to keep and create profitable businesses.</li>
             </ul>
           </div>
         </div>
-        <div class="row pb10">
-          <div class="columns align-self-top small-12 medium-6">
-            <h2>Quality Engineer &amp; Quality Assurance Manager</h2>
-            <p class="text-center">2003 - 2007</p>
+      </article>
+
+      <article class="small-12 columns">
+        <h2>Quality Engineer &amp; Quality Assurance Manager</h2>
+        <h4>Rioglass</h4>
+        <p class="text-center">2003 - 2007</p>
+        <div class="row collapse">
+          <div class="columns small-12 medium-6 align-self-middle">    
             <a href="http://rioglass.com" target="_blank"><img src="img/rioglass.png" alt="Rioglass logo"></a>
-            <h4>Rioglass</h4>
+          </div>
+          <div class="columns small-12 medium-6 align-self-middle">
             <ul>
               <li>Responsible for the Premium Products Quality Assurance Team (BMW, Jaguar, Mini, &amp; Lamborghini).</li>
               <li>Defined, managed &amp; assured goals and production targets to meet customer's specifications &amp; demand.</li>
             </ul>
           </div>
-          <div class="columns align-self-top small-12 medium-6">
-            <h2>Product Engineer &amp; Six Sigma Green Belt</h2>
-            <p class="text-center">2000 - 2002</p>
+        </div>
+      </article>
+
+      <article class="small-12 columns">
+        <h2>Product Engineer &amp; Six Sigma Green Belt</h2>
+        <h4>Ford Motor Company</h4>
+        <p class="text-center">2000 - 2002</p>
+        <div class="row collapse">
+          <div class="columns small-12 medium-6 align-self-middle">
             <a href="http://ford.com" target="_blank"><img src="img/ford.png" alt="Ford Motor Company logo"></a>
-            <h4>Ford Motor Company</h4>
+          </div>
+          <div class="columns small-12 medium-6 align-self-middle">
             <ul>
               <li>Saved over USD$150,000 during 2002 in the production and assembly line of the F-150 and F-250 trucks through the application of rigorous Six Sigma Methodologies.</li>
               <li>Reduced variability of power-train assembly process through the implementation of over 50 successful engineering changes in the production and assembly line.</li>
             </ul>
-          </div>
         </div>
-        <div class="row">
-          <div class="columns align-self-middle small-12 medium-6">
-            <a class="large download button" href="http://mikerai.com/Miguel_Angel_Rodriguez_Resume.pdf" download="Miguel_Angel_Rodriguez_Resume" target="_blank" title="Download my Resume">Download my Resume</a>
-          </div>
-          <div class="columns small-12 medium-6 linkedin">
-            <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
-            <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/mikerai" data-format="inline" data-related="false" data-width="300"></script>
-          </div>
         </div>
       </article>
 
+      <div class="columns align-self-middle small-12 medium-6">
+        <a class="large download button" href="http://mikerai.com/Miguel_Angel_Rodriguez_Resume.pdf" download="Miguel_Angel_Rodriguez_Resume" target="_blank" title="Download my Resume">Download my Resume</a>
+      </div>
+      <div class="columns small-12 medium-6 linkedin">
+        <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+        <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/mikerai" data-format="inline" data-related="false" data-width="300"></script>
+      </div>
     </section>
 
     <section class="row skills" id="skills">
       <div class="columns small-12">
         <h3>What I am good at</h3>
      </div>
+     <div class="columns small-12 text-center mtb15 np">
+      <span data-tooltip aria-haspopup="true" class="has-tip top" data-disable-hover="false" tabindex="2" title="Please visit my linkedin profile"><a href="https://www.linkedin.com/in/mikerai" target="_blank"><img data-interchange="[img/profile-picture.jpg, small], [img/profile-picture.jpg, medium], [img/profile-picture.jpg, large], [img/profile-picture@2x.jpg, retina]" alt="Miguel's profile picture"></a></span>
+     </div>
      <article class="row">
        <div class="columns small-12 medium-6">
         <ul>
-          <li>Over 14 years of management experience.</li>
+          <li>Over <strong>14 years</strong> of management experience.</li>
           <li>User Experience focused professional.</li>
-          <li>HTML, CSS, SASS, js, jQuery &amp; ATG UI web developer with more than 10 years of experience.</li>
+          <li>HTML, CSS, SASS, js, jQuery &amp; <strong>Oracle Commerce</strong> (formerly ATG) UI web developer with more than 10 years of experience.</li>
           <li>Proficient in responsive web design.</li>
-          <li>E-commerce expert. ADA &amp; SEO professional knowledge.</li>
+          <li><strong>E-commerce</strong> expert. <strong>ADA</strong> &amp; <strong>SEO</strong> professional knowledge.</li>
           <li>Junior iOS developer.</li>
         </ul>
        </div>
        <div class="columns small-12 medium-6">
         <ul>
-          <li>Certified Six Sigma Green Belt.</li>
+          <li>Certified <strong>Six Sigma Green Belt</strong>.</li>
           <li>Expert in wireframing &amp; prototyping.</li>
           <li>Multi-disciplinary teams leadership and management.</li>
-          <li>Expert in forecasting &amp; project management.</li>
+          <li>Expert in <strong>forecasting</strong> &amp; project management.</li>
           <li>Proficient using SVN &amp; Git tools.</li>
           <li>Fluent in English.</li>
         </ul>
@@ -287,7 +316,7 @@
       <a class="text-center" href="https://itunes.apple.com/us/artist/phiveleven-llc-mikerai/id461579017?l=en"><img class="crystal" src="img/appStoreBig2.png" width="320" height="95" alt="Miguel Angel Rodriguez Apple's App Store logo"></a></div>
     </section>
 
-    <section class="row expanded contact" id="contact">
+    <section class="row contact" id="contact">
       <div class="columns small-12">
         <h3>Contact Me</h3>
         <p>Please feel free to shoot me an email so we can start talking about your project.</p>
