Added og meta tags
Added og meta tags

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -10,6 +10,21 @@
     <meta name="description" content="UX Manager at Speedcommerce.com • Engineer • E-commerce expert • UI Developer on Oracle Commerce (formerly ATG) • iOS Developer • Collector of rare knowledge. Contact me to discuss your project, It will be my pleasure to help you.">
     <link rel="stylesheet" href="css/app.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+    <meta property="og:title" content="Miguel Angel Rodriguez Alvarez Icaza" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://mikerai.com" />
+    <meta property="og:image" content="http://mikerai.com/img/hero-banner-2.jpg" />
+    <meta property="og:image" content="http://mikerai.com/img/apple-iphone-desk-office.jpg" />
+    <meta property="og:image" content="http://mikerai.com/videos/Mock-up.jpg" />
+    <meta property="og:image" content="http://mikerai.com/videos/Productive-Morning.jpg" />
+    <meta property="og:image" content="http://mikerai.com/videos/Wall-Sketching.jpg" />
+    <meta property="og:image" content="http://mikerai.com/img/profile-picture.jpg" />
+    <meta property="og:image" content="http://mikerai.com/img/profile-picture@2x.jpg" />
+    <meta property="og:description" content="UX Manager at Speedcommerce.com • Engineer • E-commerce expert • UI Developer on Oracle Commerce (formerly ATG) • iOS Developer • Collector of rare knowledge. Contact me to discuss your project, It will be my pleasure to help you." />
+    <meta property="og:video" content="http://mikerai.com/videos/Productive-Morning.mp4" />
+    <meta property="og:video:type" content="video/mp4" />
+    <meta property="og:video:width" content="1920" />
+    <meta property="og:video:height" content="1080" />
   </head>
   <body>
 
