--- a/F6-resume-02-2016/ios-apps.html
+++ b/F6-resume-02-2016/ios-apps.html
@@ -7,9 +7,14 @@
     <meta name="robots" content="index follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no" />
     <title>mikerai's apps</title>
-    <meta name="description" content="UX Manager at Speedcommerce.com • Engineer • E-commerce expert • UI Developer on Oracle ATG • iOS Developer • Collector of rare knowledge. Contact me to discuss your project, It will be my pleasure to help you.">
+    <meta name="description" content="UX Manager at Speedcommerce.com • Engineer • E-commerce expert • UI Developer on Oracle Commerce (formerly ATG) • iOS Developer • Collector of rare knowledge. Contact me to discuss your project, It will be my pleasure to help you.">
     <link rel="stylesheet" href="css/app.css">
     <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+    <meta property="og:title" content="Miguel Angel Rodriguez Alvarez Icaza" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://mikerai.com" />
+    <meta property="og:image" content="http://mikerai.com/img/profile-picture.jpg" />
+    <meta property="og:description" content="UX Manager at Speedcommerce.com • Engineer • E-commerce expert • UI Developer on Oracle Commerce (formerly ATG) • iOS Developer • Collector of rare knowledge. Contact me to discuss your project, It will be my pleasure to help you." />
   </head>
   <body>
 
