Updated web development
Added BG and konvence

--- a/F6-resume-02-2016/index.html
+++ b/F6-resume-02-2016/index.html
@@ -300,7 +300,9 @@
       <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://rodiles.com.mx" target="_blank"><img src="img/rodiles.png" alt="Rodiles de Mexico corporate site" title="Rodiles de Mexico corporate site"></a></div>
       <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://gruponafa.com" target="_blank"><img src="img/nafa.png" alt="Grupo Nafa corporate site" title="Grupo Nafa corporate site"></a></div>
       <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://workngear.com" target="_blank"><img src="img/workngear.png" alt="Work N Gear online store" title="Work N Gear online store"></a></div>
-      <div class="column align-self-middle small-12">
+      <div class="column align-self-middle small-6 medium-3 medium-offset-3 text-center mtb15"><a href="http://bgproducts.mx" target="_blank"><img src="img/bg_products.png" alt="BG Products Mexico" title="BG Products Mexico"></a></div>
+      <div class="column align-self-middle small-6 medium-3 text-center mtb15"><a href="http://konvence.com" target="_blank"><img src="img/konvence.png" alt="Somos konvence" title="Somos konvence"></a></div>
+      <div class="column align-self-middle small-12 pt25">
         <h2>iOS Development</h2>
       </div>
       <div class="column align-self-middle small-12 medium-4 text-center mtb15">
